@@ -21,7 +21,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Validated
 @RestController
@@ -64,7 +63,7 @@ public class ProdutoController implements ProdutoAPI {
         return produtoBuscarTodosUseCase.realizar(produto)
                 .stream()
                 .map(produtoAdapter::toDtoResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
